--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : "Muthu Palaniappan Alagappan"
   avatar           : "muthu_pic.jpg"
-  bio              : "CS grad student @USC | Juggler"
+  bio              : "CS grad student @USC"
   location         : "Los Angeles"
   employer         : "University of Southern California"
   employer_link    : "https://www.usc.edu/"
